prevent x overflow for html and body

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,11 +4,13 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
+  overflow-x: hidden; 
 }
 
 @layer base {
